--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -1,4 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '10.0'
 
 target 'PDKTProgress' do
   pod "PDKTProgress", :path => "../"
